--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "sdk.dir": "/home/muhindi/Android/Sdk"
       },
       "package": "com.muhindi.bloodnet"
     },
