--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-location": "^17.0.1",
+    "expo-location": "~17.0.1",
     "expo-router": "^3.5.21",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
@@ -33,7 +33,7 @@
     "react-native-appwrite": "^0.2.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.17.3",
+    "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
