--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
@@ -40,6 +41,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
